WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163609
Showing and hiding candidates list is very distracting after selecting word
https://bugs.webkit.org/show_bug.cgi?id=163609
Summary
Showing and hiding candidates list is very distracting after selecting word
Wenson Hsieh
Reported
2016-10-18 12:22:56 PDT
Expanding and contracting candidates list is very distracting after selecting word
Attachments
Patch
(3.18 KB, patch)
2016-10-18 12:26 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2016-10-18 12:26:12 PDT
Created
attachment 291968
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-18 12:27:06 PDT
Attachment 291968
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebViewInternal.h:0: Use #pragma once header guard. [build/header_guard] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Wenson Hsieh
Comment 3
2016-10-18 13:33:36 PDT
Committed
r207483
: <
http://trac.webkit.org/changeset/207483
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug