Showing and hiding candidates list is very distracting after selecting word https://bugs.webkit.org/show_bug.cgi?id=163609 <rdar://problem/28747712>

Reviewed by Tim Horton.

Introduce WebView hooks for mousedown and mouseup. See radar for more details.

* WebView/WebHTMLView.mm:
(-[WebHTMLView mouseDown:mouseDown:]):
(-[WebHTMLView mouseUp:mouseUp:]):
* WebView/WebView.mm:
(-[WebView prepareForMouseDown]):
(-[WebView prepareForMouseUp]):
* WebView/WebViewInternal.h:

Canonical link: https://commits.webkit.org/181396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207483 268f45cc-cd09-0410-ab3c-d52691b4dbfc